// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calcHS4 — snapshots (SPEC §5) > acometida baja (120 kPa) → grupo de presión necesario 1`] = `
{
  "arbolValido": true,
  "caudalTotal_dm3_s": 0.5166666666666666,
  "criterioK": "une149201",
  "grupoPresionNecesario": true,
  "kEsCriterioExterno": true,
  "normaCriterioK": "UNE 149201",
  "porAparato": [
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "bano-lavabo",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-bano-lavabo",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "bano-inodoro",
      "presionMinExigida_kPa": 100,
      "tipo": "inodoro_cisterna",
      "tramoId": "d-bano-inodoro",
    },
    {
      "caudalInstantaneo_dm3_s": 0.3,
      "cumple": false,
      "diametroMinDerivacion_mm": 20,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "bano-banera",
      "presionMinExigida_kPa": 100,
      "tipo": "banera_ge_140",
      "tramoId": "d-bano-banera",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "bano-bide",
      "presionMinExigida_kPa": 100,
      "tipo": "bide",
      "tramoId": "d-bano-bide",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "aseo-lavabo",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-aseo-lavabo",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "aseo-inodoro",
      "presionMinExigida_kPa": 100,
      "tipo": "inodoro_cisterna",
      "tramoId": "d-aseo-inodoro",
    },
    {
      "caudalInstantaneo_dm3_s": 0.2,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "aseo-ducha",
      "presionMinExigida_kPa": 100,
      "tipo": "ducha",
      "tramoId": "d-aseo-ducha",
    },
    {
      "caudalInstantaneo_dm3_s": 0.2,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "coc-fregadero",
      "presionMinExigida_kPa": 100,
      "tipo": "fregadero_domestico",
      "tramoId": "d-coc-fregadero",
    },
    {
      "caudalInstantaneo_dm3_s": 0.15,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "coc-lavavajillas",
      "presionMinExigida_kPa": 100,
      "tipo": "lavavajillas_domestico",
      "tramoId": "d-coc-lavavajillas",
    },
    {
      "caudalInstantaneo_dm3_s": 0.2,
      "cumple": false,
      "diametroMinDerivacion_mm": 20,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "coc-lavadora",
      "presionMinExigida_kPa": 100,
      "tipo": "lavadora_domestica",
      "tramoId": "d-coc-lavadora",
    },
  ],
  "porTramo": [
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-lavabo",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.859580949592764,
      "presionResidual_kPa": 82.78347517689967,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-inodoro",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.859580949592764,
      "presionResidual_kPa": 82.78347517689967,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.3,
      "caudalCalculo_dm3_s": 0.3,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 13.81976597885342,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-banera",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.2) · Q_cálc=0.300 dm³/s (=0.300×K1.000, n=1) → Ø teórico 13.8 mm → Ø comercial 20 mm · v=0.95 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.69 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.6924782760960948,
      "presionResidual_kPa": 82.95057785039634,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.9549296585513718,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-bide",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.859580949592764,
      "presionResidual_kPa": 82.78347517689967,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.6,
      "caudalCalculo_dm3_s": 0.3464101615137755,
      "childrenIds": [
        "d-bano-lavabo",
        "d-bano-inodoro",
        "d-bano-banera",
        "d-bano-bide",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 20,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 14.850304985713825,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "ramal-bano",
      "k": 0.5773502691896258,
      "longitud_m": 3,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Cuarto húmedo privado (baño/aseo/cocina)) · Q_cálc=0.346 dm³/s (=0.600×K0.577, n=4) → Ø teórico 14.9 mm → Ø comercial 20 mm · v=1.10 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 1.34 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 4,
      "parentId": "deriv-particular",
      "perdida_kPa": 1.3360379893233165,
      "presionResidual_kPa": 83.64305612649244,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.1026577908435842,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-aseo-lavabo",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-aseo",
      "perdida_kPa": 0.859580949592764,
      "presionResidual_kPa": 83.18251453707032,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-aseo-inodoro",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-aseo",
      "perdida_kPa": 0.859580949592764,
      "presionResidual_kPa": 83.18251453707032,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.2,
      "caudalCalculo_dm3_s": 0.2,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 11.283791670955127,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-aseo-ducha",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.200 dm³/s (=0.200×K1.000, n=1) → Ø teórico 11.3 mm → Ø comercial 12 mm · v=1.77 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 3.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-aseo",
      "perdida_kPa": 3.855032208709008,
      "presionResidual_kPa": 80.18706327795408,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.7683882565766151,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.4,
      "caudalCalculo_dm3_s": 0.282842712474619,
      "childrenIds": [
        "d-aseo-lavabo",
        "d-aseo-inodoro",
        "d-aseo-ducha",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 12,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 13.418765339308278,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "ramal-aseo",
      "k": 0.7071067811865475,
      "longitud_m": 3,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Cuarto húmedo privado (baño/aseo/cocina)) · Q_cálc=0.283 dm³/s (=0.400×K0.707, n=3) → Ø teórico 13.4 mm → Ø comercial 20 mm · v=0.90 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.94 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 3,
      "parentId": "deriv-particular",
      "perdida_kPa": 0.9369986291526654,
      "presionResidual_kPa": 84.04209548666309,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.900316316157106,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.2,
      "caudalCalculo_dm3_s": 0.2,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 11.283791670955127,
      "diametro_mm": 12,
      "esCritico": true,
      "estado": "ok",
      "id": "d-coc-fregadero",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.200 dm³/s (=0.200×K1.000, n=1) → Ø teórico 11.3 mm → Ø comercial 12 mm · v=1.77 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 3.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-cocina",
      "perdida_kPa": 3.855032208709008,
      "presionResidual_kPa": 78.94280201472644,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.7683882565766151,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.15,
      "caudalCalculo_dm3_s": 0.15,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 9.772050238058398,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-coc-lavavajillas",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.150 dm³/s (=0.150×K1.000, n=1) → Ø teórico 9.8 mm → Ø comercial 12 mm · v=1.33 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 2.33 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-cocina",
      "perdida_kPa": 2.3301572049506225,
      "presionResidual_kPa": 80.46767701848482,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.3262911924324612,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.2,
      "caudalCalculo_dm3_s": 0.2,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 11.283791670955127,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "d-coc-lavadora",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.2) · Q_cálc=0.200 dm³/s (=0.200×K1.000, n=1) → Ø teórico 11.3 mm → Ø comercial 20 mm · v=0.64 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.34 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-cocina",
      "perdida_kPa": 0.34060141686257595,
      "presionResidual_kPa": 82.45723280657288,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.6366197723675813,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.55,
      "caudalCalculo_dm3_s": 0.38890872965260115,
      "childrenIds": [
        "d-coc-fregadero",
        "d-coc-lavavajillas",
        "d-coc-lavadora",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 20,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 15.734897106215985,
      "diametro_mm": 20,
      "esCritico": true,
      "estado": "ok",
      "id": "ramal-cocina",
      "k": 0.7071067811865475,
      "longitud_m": 4,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Cuarto húmedo privado (baño/aseo/cocina)) · Q_cálc=0.389 dm³/s (=0.550×K0.707, n=3) → Ø teórico 15.7 mm → Ø comercial 20 mm · v=1.24 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 2.18 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 3,
      "parentId": "deriv-particular",
      "perdida_kPa": 2.181259892380313,
      "presionResidual_kPa": 82.79783422343544,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.2379349347160207,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "ramal-bano",
        "ramal-aseo",
        "ramal-cocina",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 20,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "deriv-particular",
      "k": 0.3333333333333333,
      "longitud_m": 4,
      "material": "metalica",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Derivación particular (vivienda/apartamento/local)) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 1.24 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": "montante",
      "perdida_kPa": 1.242423529818719,
      "presionResidual_kPa": 84.97909411581576,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
    {
      "altura_m": 3,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "deriv-particular",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "montante",
      "k": 0.3333333333333333,
      "longitud_m": 6,
      "material": "metalica",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Columna (montante o descendente)) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 31.29 kPa (long.+25% local.+cota 3 m; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": "alimentacion",
      "perdida_kPa": 31.293635294728077,
      "presionResidual_kPa": 86.22151764563448,
      "tipo": "columna_montante",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "montante",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "alimentacion",
      "k": 0.3333333333333333,
      "longitud_m": 5,
      "material": "metalica",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 1.55 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": "acometida",
      "perdida_kPa": 1.5530294122733987,
      "presionResidual_kPa": 117.51515294036255,
      "tipo": "tubo_alimentacion",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "alimentacion",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "acometida",
      "k": 0.3333333333333333,
      "longitud_m": 3,
      "material": "metalica",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 0.93 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": null,
      "perdida_kPa": 0.9318176473640392,
      "presionResidual_kPa": 119.06818235263596,
      "tipo": "acometida",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
  ],
  "presionAcometida_kPa": 120,
  "presionCritica_kPa": 78.94280201472644,
  "puntoCriticoId": "coc-fregadero",
  "veredictoGlobal": "fail",
  "warnings": [
    "Coeficiente de simultaneidad K = 1/√(n−1): CRITERIO EXTERNO (UNE 149201), NO exigencia del DB-HS4 (el DB remite a "un criterio adecuado").",
    "Punto de consumo "bano-lavabo": presión residual 82.8 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "bano-inodoro": presión residual 82.8 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "bano-banera": presión residual 83.0 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "bano-bide": presión residual 82.8 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "aseo-lavabo": presión residual 83.2 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "aseo-inodoro": presión residual 83.2 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "aseo-ducha": presión residual 80.2 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "coc-fregadero": presión residual 78.9 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "coc-lavavajillas": presión residual 80.5 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "coc-lavadora": presión residual 82.5 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Grupo de presión NECESARIO (ap. 4.5): el punto de peor margen "coc-fregadero" (78.9 kPa) no alcanza su mínima exigida 100 kPa (o algún otro punto de consumo presenta déficit).",
  ],
}
`;

exports[`calcHS4 — snapshots (SPEC §5) > muchos aparatos (24) → K de simultaneidad pequeño 1`] = `
{
  "arbolValido": true,
  "caudalTotal_dm3_s": 0.5004345937369796,
  "criterioK": "une149201",
  "grupoPresionNecesario": false,
  "kEsCriterioExterno": true,
  "normaCriterioK": "UNE 149201",
  "porAparato": [
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-0",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-1",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-2",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-3",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-4",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-5",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-6",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-7",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-8",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-9",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-10",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-11",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-12",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-13",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-14",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-15",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-16",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-17",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-18",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-19",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-20",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-21",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-22",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-23",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
  ],
  "porTramo": [
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 2.400000000000001,
      "caudalCalculo_dm3_s": 0.5004345937369796,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 22.577388942026012,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "d-lavabos",
      "k": 0.20851441405707477,
      "longitud_m": 2,
      "material": "metalica",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.500 dm³/s (=2.400×K0.209, n=24) → Ø teórico 22.6 mm → Ø comercial 25 mm · v=1.02 m/s en rango [0.5, 2] (metalica) · pérdida 0.59 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 24,
      "parentId": "ramal",
      "perdida_kPa": 0.5874612330658918,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.0194769828790369,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 2.400000000000001,
      "caudalCalculo_dm3_s": 0.5004345937369796,
      "childrenIds": [
        "d-lavabos",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 22.577388942026012,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "ramal",
      "k": 0.20851441405707477,
      "longitud_m": 5,
      "material": "metalica",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Derivación particular (vivienda/apartamento/local)) · Q_cálc=0.500 dm³/s (=2.400×K0.209, n=24) → Ø teórico 22.6 mm → Ø comercial 25 mm · v=1.02 m/s en rango [0.5, 2] (metalica) · pérdida 1.47 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 24,
      "parentId": "alimentacion",
      "perdida_kPa": 1.4686530826647295,
      "presionResidual_kPa": 395.8877713685387,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.0194769828790369,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 2.400000000000001,
      "caudalCalculo_dm3_s": 0.5004345937369796,
      "childrenIds": [
        "ramal",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 22.577388942026012,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "alimentacion",
      "k": 0.20851441405707477,
      "longitud_m": 6,
      "material": "metalica",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.500 dm³/s (=2.400×K0.209, n=24) → Ø teórico 22.6 mm → Ø comercial 25 mm · v=1.02 m/s en rango [0.5, 2] (metalica) · pérdida 1.76 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 24,
      "parentId": "acometida",
      "perdida_kPa": 1.7623836991976756,
      "presionResidual_kPa": 397.35642445120345,
      "tipo": "tubo_alimentacion",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.0194769828790369,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 2.400000000000001,
      "caudalCalculo_dm3_s": 0.5004345937369796,
      "childrenIds": [
        "alimentacion",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 22.577388942026012,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "acometida",
      "k": 0.20851441405707477,
      "longitud_m": 3,
      "material": "metalica",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.500 dm³/s (=2.400×K0.209, n=24) → Ø teórico 22.6 mm → Ø comercial 25 mm · v=1.02 m/s en rango [0.5, 2] (metalica) · pérdida 0.88 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 24,
      "parentId": null,
      "perdida_kPa": 0.8811918495988378,
      "presionResidual_kPa": 399.11880815040115,
      "tipo": "acometida",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.0194769828790369,
    },
  ],
  "presionAcometida_kPa": 400,
  "presionCritica_kPa": 395.30031013547284,
  "puntoCriticoId": "lav-0",
  "veredictoGlobal": "ok",
  "warnings": [
    "Tramo "d-lavabos" (derivación de aparato): 24 aparatos sobre la misma derivación; la Tabla 4.2 es por derivación INDIVIDUAL (revisar Ø por aparato).",
    "Coeficiente de simultaneidad K = 1/√(n−1): CRITERIO EXTERNO (UNE 149201), NO exigencia del DB-HS4 (el DB remite a "un criterio adecuado").",
  ],
}
`;

exports[`calcHS4 — snapshots (SPEC §5) > un solo aparato (K = 1, la fórmula UNE 149201 no aplica) 1`] = `
{
  "arbolValido": true,
  "caudalTotal_dm3_s": 0.1,
  "criterioK": "une149201",
  "grupoPresionNecesario": false,
  "kEsCriterioExterno": true,
  "normaCriterioK": "UNE 149201",
  "porAparato": [
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lavabo",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-lavabo",
    },
  ],
  "porTramo": [
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": true,
      "estado": "ok",
      "id": "d-lavabo",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 1.15 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "alimentacion",
      "perdida_kPa": 1.1461079327903518,
      "presionResidual_kPa": 298.7310945911926,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [
        "d-lavabo",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 12,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "warn",
      "id": "alimentacion",
      "k": 1,
      "longitud_m": 4,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 25 mm · v=0.20 m/s fuera del rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.07 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "acometida",
      "perdida_kPa": 0.07016998629546004,
      "presionResidual_kPa": 299.87720252398293,
      "tipo": "tubo_alimentacion",
      "velocidadFueraDeRango": true,
      "velocidad_m_s": 0.20371832715762603,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [
        "alimentacion",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "warn",
      "id": "acometida",
      "k": 1,
      "longitud_m": 3,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 25 mm · v=0.20 m/s fuera del rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.05 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": null,
      "perdida_kPa": 0.05262748972159503,
      "presionResidual_kPa": 299.9473725102784,
      "tipo": "acometida",
      "velocidadFueraDeRango": true,
      "velocidad_m_s": 0.20371832715762603,
    },
  ],
  "presionAcometida_kPa": 300,
  "presionCritica_kPa": 298.7310945911926,
  "puntoCriticoId": "lavabo",
  "veredictoGlobal": "warn",
  "warnings": [
    "Coeficiente de simultaneidad K = 1/√(n−1): CRITERIO EXTERNO (UNE 149201), NO exigencia del DB-HS4 (el DB remite a "un criterio adecuado").",
    "Velocidad 0.20 m/s fuera del rango recomendado DB-HS4 ap. 4.2 d) (tramo "alimentacion", termoplastico_multicapa: por debajo del mínimo 0.5 m/s); buena práctica, no exigencia prestacional del CTE.",
    "Velocidad 0.20 m/s fuera del rango recomendado DB-HS4 ap. 4.2 d) (tramo "acometida", termoplastico_multicapa: por debajo del mínimo 0.5 m/s); buena práctica, no exigencia prestacional del CTE.",
  ],
}
`;

exports[`calcHS4 — snapshots (SPEC §5) > vivienda realista (defaults, acometida 250 kPa → CUMPLE) 1`] = `
{
  "arbolValido": true,
  "caudalTotal_dm3_s": 0.5166666666666666,
  "criterioK": "une149201",
  "grupoPresionNecesario": false,
  "kEsCriterioExterno": true,
  "normaCriterioK": "UNE 149201",
  "porAparato": [
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "bano-lavabo",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-bano-lavabo",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "bano-inodoro",
      "presionMinExigida_kPa": 100,
      "tipo": "inodoro_cisterna",
      "tramoId": "d-bano-inodoro",
    },
    {
      "caudalInstantaneo_dm3_s": 0.3,
      "cumple": true,
      "diametroMinDerivacion_mm": 20,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "bano-banera",
      "presionMinExigida_kPa": 100,
      "tipo": "banera_ge_140",
      "tramoId": "d-bano-banera",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "bano-bide",
      "presionMinExigida_kPa": 100,
      "tipo": "bide",
      "tramoId": "d-bano-bide",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "aseo-lavabo",
      "presionMinExigida_kPa": 100,
      "tipo": "lavabo",
      "tramoId": "d-aseo-lavabo",
    },
    {
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "aseo-inodoro",
      "presionMinExigida_kPa": 100,
      "tipo": "inodoro_cisterna",
      "tramoId": "d-aseo-inodoro",
    },
    {
      "caudalInstantaneo_dm3_s": 0.2,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "aseo-ducha",
      "presionMinExigida_kPa": 100,
      "tipo": "ducha",
      "tramoId": "d-aseo-ducha",
    },
    {
      "caudalInstantaneo_dm3_s": 0.2,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "coc-fregadero",
      "presionMinExigida_kPa": 100,
      "tipo": "fregadero_domestico",
      "tramoId": "d-coc-fregadero",
    },
    {
      "caudalInstantaneo_dm3_s": 0.15,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "coc-lavavajillas",
      "presionMinExigida_kPa": 100,
      "tipo": "lavavajillas_domestico",
      "tramoId": "d-coc-lavavajillas",
    },
    {
      "caudalInstantaneo_dm3_s": 0.2,
      "cumple": true,
      "diametroMinDerivacion_mm": 20,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "coc-lavadora",
      "presionMinExigida_kPa": 100,
      "tipo": "lavadora_domestica",
      "tramoId": "d-coc-lavadora",
    },
  ],
  "porTramo": [
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-lavabo",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.859580949592764,
      "presionResidual_kPa": 212.78347517689969,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-inodoro",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.859580949592764,
      "presionResidual_kPa": 212.78347517689969,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.3,
      "caudalCalculo_dm3_s": 0.3,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 13.81976597885342,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-banera",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.2) · Q_cálc=0.300 dm³/s (=0.300×K1.000, n=1) → Ø teórico 13.8 mm → Ø comercial 20 mm · v=0.95 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.69 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.6924782760960948,
      "presionResidual_kPa": 212.95057785039634,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.9549296585513718,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-bide",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.859580949592764,
      "presionResidual_kPa": 212.78347517689969,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.6,
      "caudalCalculo_dm3_s": 0.3464101615137755,
      "childrenIds": [
        "d-bano-lavabo",
        "d-bano-inodoro",
        "d-bano-banera",
        "d-bano-bide",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 20,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 14.850304985713825,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "ramal-bano",
      "k": 0.5773502691896258,
      "longitud_m": 3,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Cuarto húmedo privado (baño/aseo/cocina)) · Q_cálc=0.346 dm³/s (=0.600×K0.577, n=4) → Ø teórico 14.9 mm → Ø comercial 20 mm · v=1.10 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 1.34 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 4,
      "parentId": "deriv-particular",
      "perdida_kPa": 1.3360379893233165,
      "presionResidual_kPa": 213.64305612649244,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.1026577908435842,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-aseo-lavabo",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-aseo",
      "perdida_kPa": 0.859580949592764,
      "presionResidual_kPa": 213.18251453707035,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-aseo-inodoro",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-aseo",
      "perdida_kPa": 0.859580949592764,
      "presionResidual_kPa": 213.18251453707035,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.2,
      "caudalCalculo_dm3_s": 0.2,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 11.283791670955127,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-aseo-ducha",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.200 dm³/s (=0.200×K1.000, n=1) → Ø teórico 11.3 mm → Ø comercial 12 mm · v=1.77 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 3.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-aseo",
      "perdida_kPa": 3.855032208709008,
      "presionResidual_kPa": 210.18706327795408,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.7683882565766151,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.4,
      "caudalCalculo_dm3_s": 0.282842712474619,
      "childrenIds": [
        "d-aseo-lavabo",
        "d-aseo-inodoro",
        "d-aseo-ducha",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 12,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 13.418765339308278,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "ramal-aseo",
      "k": 0.7071067811865475,
      "longitud_m": 3,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Cuarto húmedo privado (baño/aseo/cocina)) · Q_cálc=0.283 dm³/s (=0.400×K0.707, n=3) → Ø teórico 13.4 mm → Ø comercial 20 mm · v=0.90 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.94 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 3,
      "parentId": "deriv-particular",
      "perdida_kPa": 0.9369986291526654,
      "presionResidual_kPa": 214.0420954866631,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.900316316157106,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.2,
      "caudalCalculo_dm3_s": 0.2,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 11.283791670955127,
      "diametro_mm": 12,
      "esCritico": true,
      "estado": "ok",
      "id": "d-coc-fregadero",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.200 dm³/s (=0.200×K1.000, n=1) → Ø teórico 11.3 mm → Ø comercial 12 mm · v=1.77 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 3.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-cocina",
      "perdida_kPa": 3.855032208709008,
      "presionResidual_kPa": 208.94280201472642,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.7683882565766151,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.15,
      "caudalCalculo_dm3_s": 0.15,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 9.772050238058398,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-coc-lavavajillas",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.150 dm³/s (=0.150×K1.000, n=1) → Ø teórico 9.8 mm → Ø comercial 12 mm · v=1.33 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 2.33 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-cocina",
      "perdida_kPa": 2.3301572049506225,
      "presionResidual_kPa": 210.46767701848484,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.3262911924324612,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.2,
      "caudalCalculo_dm3_s": 0.2,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 11.283791670955127,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "d-coc-lavadora",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.2) · Q_cálc=0.200 dm³/s (=0.200×K1.000, n=1) → Ø teórico 11.3 mm → Ø comercial 20 mm · v=0.64 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.34 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-cocina",
      "perdida_kPa": 0.34060141686257595,
      "presionResidual_kPa": 212.45723280657288,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.6366197723675813,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.55,
      "caudalCalculo_dm3_s": 0.38890872965260115,
      "childrenIds": [
        "d-coc-fregadero",
        "d-coc-lavavajillas",
        "d-coc-lavadora",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 20,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 15.734897106215985,
      "diametro_mm": 20,
      "esCritico": true,
      "estado": "ok",
      "id": "ramal-cocina",
      "k": 0.7071067811865475,
      "longitud_m": 4,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Cuarto húmedo privado (baño/aseo/cocina)) · Q_cálc=0.389 dm³/s (=0.550×K0.707, n=3) → Ø teórico 15.7 mm → Ø comercial 20 mm · v=1.24 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 2.18 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 3,
      "parentId": "deriv-particular",
      "perdida_kPa": 2.181259892380313,
      "presionResidual_kPa": 212.79783422343544,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.2379349347160207,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "ramal-bano",
        "ramal-aseo",
        "ramal-cocina",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 20,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "deriv-particular",
      "k": 0.3333333333333333,
      "longitud_m": 4,
      "material": "metalica",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Derivación particular (vivienda/apartamento/local)) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 1.24 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": "montante",
      "perdida_kPa": 1.242423529818719,
      "presionResidual_kPa": 214.97909411581577,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
    {
      "altura_m": 3,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "deriv-particular",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "montante",
      "k": 0.3333333333333333,
      "longitud_m": 6,
      "material": "metalica",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Columna (montante o descendente)) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 31.29 kPa (long.+25% local.+cota 3 m; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": "alimentacion",
      "perdida_kPa": 31.293635294728077,
      "presionResidual_kPa": 216.2215176456345,
      "tipo": "columna_montante",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "montante",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "alimentacion",
      "k": 0.3333333333333333,
      "longitud_m": 5,
      "material": "metalica",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 1.55 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": "acometida",
      "perdida_kPa": 1.5530294122733987,
      "presionResidual_kPa": 247.51515294036258,
      "tipo": "tubo_alimentacion",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "alimentacion",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "acometida",
      "k": 0.3333333333333333,
      "longitud_m": 3,
      "material": "metalica",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 0.93 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": null,
      "perdida_kPa": 0.9318176473640392,
      "presionResidual_kPa": 249.06818235263597,
      "tipo": "acometida",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
  ],
  "presionAcometida_kPa": 250,
  "presionCritica_kPa": 208.94280201472642,
  "puntoCriticoId": "coc-fregadero",
  "veredictoGlobal": "ok",
  "warnings": [
    "Coeficiente de simultaneidad K = 1/√(n−1): CRITERIO EXTERNO (UNE 149201), NO exigencia del DB-HS4 (el DB remite a "un criterio adecuado").",
  ],
}
`;
